# Babel_2019

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
includes/: Audio.hpp  Opus.hpp  client_udp.hpp
includes/GUI/: AGui.hpp  add_contact.hpp  contactwindow.hpp  login.hpp  registration.hpp
includes/client/: AClientConnection.hpp  AClientTcp.hpp  client_tcp.hpp  client_udp.hpp  packet.hpp
includes/server/: AServer.hpp  database.hpp  server.hpp  session.hpp
src/: Audio.cpp  Opus.cpp  main.cpp
src/GUI/: AGui.cpp  add_contact.cpp  contactwindow.cpp  login.cpp  registration.cpp
src/client/: AClientConnection.cpp  AClientTcp.cpp  client_tcp.cpp  client_udp.cpp  packet.cpp
src/client_udp/: client_udp.cpp
src/server/: AServer.cpp  database.cpp  server.cpp  session.cpp
